Import of BEROV/Ado-Plugin-Vest-0.06 from CPAN.
gitpan-cpan-distribution: Ado-Plugin-Vest
gitpan-cpan-version:      0.06
gitpan-cpan-path:         BEROV/Ado-Plugin-Vest-0.06.tar.gz
gitpan-cpan-author:       BEROV
gitpan-cpan-maturity:     released

--- a/etc/plugins/vest.conf
+++ b/etc/plugins/vest.conf
@@ -18,16 +18,15 @@ $config = {
         {   route       => $$config{vest_base_url} . '/list',
             via         => ['GET'],
             to          => 'vest#list',
-            over        => {authenticated => 1, ingroup => 'null'},
+            over        => {authenticated => 1, ingroup => undef},
             description => 'Lists all messages on this system. Unreachable.'
         },
-        {   route  => $$config{vest_base_url} . '/messages/:id',
-            via    => ['GET'],
-            params => {id => qr/\d+/},
-            to     => 'vest#list_messages',
-            over   => {authenticated => 1, ingroup => 'vest'},
-            description =>
-              'Lists messages from a talk of the current user (by subject_message_id)',
+        {   route       => $$config{vest_base_url} . '/messages/:id',
+            via         => ['GET'],
+            params      => {id => qr/\d+/},
+            to          => 'vest#list_messages',
+            over        => {authenticated => 1, ingroup => 'vest'},
+            description => 'Lists messages from a talk. Use talk.id to access messages.',
         },
         {   route       => $$config{vest_base_url} . '/talks',
             via         => ['GET'],
