--- a/META.yml
+++ b/META.yml
@@ -8,11 +8,24 @@ configure_requires:
   Module::Build: '0.42'
 dynamic_config: 1
 generated_by: 'Module::Build version 0.421, CPAN::Meta::Converter version 2.142060'
+keywords:
+  - Ado
+  - Mojolicious
+  - realtime
+  - web
+  - ERP
+  - REST
+  - CMS
+  - Messaging
+  - enterprise
 license: lgpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: '1.4'
 name: Ado-Plugin-Vest
+no_index:
+  namespace:
+    - Ado::Model
 provides:
   Ado::Control::Vest:
     file: lib/Ado/Control/Vest.pm
@@ -20,10 +33,13 @@ provides:
     file: lib/Ado/Model/Vest.pm
   Ado::Plugin::Vest:
     file: lib/Ado/Plugin/Vest.pm
-    version: '0.05'
+    version: '0.06'
 requires:
   Ado: '0.70'
   Mojolicious: '0'
   Mojolicious::Plugin::DSC: '0'
   Mojolicious::Plugin::SemanticUI: '0'
-version: '0.05'
+resources:
+  bugtracker: https://github.com/kberov/Ado-Plugin-Vest/issues
+  repository: https://github.com/kberov/Ado-Plugin-Vest
+version: '0.06'
