Import of BEROV/Ado-Plugin-Vest-0.08.tar.gz from CPAN.
gitpan-cpan-distribution: Ado-Plugin-Vest
gitpan-cpan-version:      0.08
gitpan-cpan-path:         BEROV/Ado-Plugin-Vest-0.08.tar.gz
gitpan-cpan-author:       BEROV
gitpan-cpan-maturity:     released

--- a/etc/plugins/vest.conf
+++ b/etc/plugins/vest.conf
@@ -11,7 +11,7 @@ $config = {
         {   route       => $$config{vest_base_url},
             via         => ['GET'],
             to          => 'vest#screen',
-            over        => {authenticated => 1, ingroup => 'vest'},
+            over        => [authenticated => 1, ingroup => 'vest'],
             description => 'Renders the default screen in html and json.'
         },
 
