--- a/etc/plugins/vest.conf
+++ b/etc/plugins/vest.conf
@@ -1,7 +1,10 @@
-#vest.conf
+#$app->home/etc/plugins/vest.conf
+# Base URL for the chat application
 my $config = {vest_base_url => '/vest'};
 $config = {
     %$config,
+    # Enable users to use vest after registration?
+    add_users_to_vest => 1,
 
     # Comment the next two lines after the first run if you do not want
     # these files to be executed on each next start.
@@ -18,8 +21,21 @@ $config = {
         {   route       => $$config{vest_base_url} . '/list',
             via         => ['GET'],
             to          => 'vest#list',
-            over        => {authenticated => 1, ingroup => undef},
-            description => 'Lists all messages on this system. Unreachable.'
+            over        => {authenticated => 1, ingroup => 'vest'},
+            description => 'Lists all messages on this system. For testing only.'
+        },
+
+        {   route       => $$config{vest_base_url} . '/users',
+            via         => ['GET'],
+            to          => 'vest#users',
+            over        => {authenticated => 1, ingroup => 'vest'},
+            description => 'Search for user with param name "First Last" within all Vest users. Returns first 50 results.'
+        },
+        {   route       => "$$config{vest_base_url}/add_contact",
+            via         => ['POST'],
+            to          => 'vest#add_contact',
+            over        => {authenticated => 1, ingroup => 'vest'},
+            description => 'Adds a contact to the list of contacts for the current user.',
         },
         {   route       => $$config{vest_base_url} . '/messages/:id',
             via         => ['GET'],
